--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@svgr/webpack": "^5.5.0",
     "framer-motion": "^4",
     "next": "12.0.2",
+    "next-images": "^1.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
