--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "next": "12.0.2",
     "next-images": "^1.8.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
+    "@types/react-slick": "^0.23.7",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "typescript": "4.4.4"
